--- a/src/pages/modulo-viagens/arla-32/arla-pag/arla-pag.html
+++ b/src/pages/modulo-viagens/arla-32/arla-pag/arla-pag.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color = "tijuca">
     <ion-title padding>Dados</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -8,12 +8,12 @@
 
   <ion-item>
     <ion-label floating>Litros</ion-label>
-    <ion-input type="number" min="0" [(ngModel)]="litros" (ngModelChange)="valida()"></ion-input>
+    <ion-input type="number" min="0" [(ngModel)]="firebaseProvider.litros" (ngModelChange)="valida()"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label floating>Litro(R$)</ion-label>
-    <ion-input type="number" [(ngModel)]="litrosPreco" (ngModelChange)="valida()"></ion-input>
+    <ion-input type="number" [(ngModel)]="firebaseProvider.litrosPreco" (ngModelChange)="valida()"></ion-input>
   </ion-item>
 
   <ion-item>
@@ -23,7 +23,7 @@
 
   <ion-item>
     <ion-label floating>Forma Pagamento</ion-label>
-    <ion-select [(ngModel)]="select" (click)="valida()">
+    <ion-select [(ngModel)]="firebaseProvider.select" (click)="valida()">
       <ion-option value="ext">Boleto Bancário</ion-option>
       <ion-option value="cre">Cartão de Crédito</ion-option>
       <ion-option value="deb">Cartão de Débito</ion-option>
