--- a/src/pages/modulo-viagens/despesas/despesas/despesas.html
+++ b/src/pages/modulo-viagens/despesas/despesas/despesas.html
@@ -29,8 +29,8 @@
       </ion-item> 
       <ion-item>
         <ion-label floating>Valor</ion-label>
-        <ion-input type="float" type="number" [(ngModel)]="firebaseProvider.valor" required #iptValor="ngModel"></ion-input>
+        <ion-input type="float" type="number" [(ngModel)]="firebaseProvider.valor"></ion-input>
       </ion-item> 
   </ion-list> 
-  <button ion-button full (click)="adicionarDados();showAlert()">Adicionar</button>
+  <button ion-button full (click)="adicionarDados();showAlert()" [disabled]="!valida()">Adicionar</button>
 </ion-content>
