--- a/src/pages/modulo-viagens/receitas/rotas-receitas/rotas-receitas.html
+++ b/src/pages/modulo-viagens/receitas/rotas-receitas/rotas-receitas.html
@@ -12,7 +12,8 @@
                 </div>
             </ion-slide>
             <ion-slide>
-                {{this.ReceitasQnt.valida()}}<page-receitas-qnt></page-receitas-qnt>
+                <!-- {{this.ReceitasQnt.valida()}} -->
+                <page-receitas-qnt></page-receitas-qnt>
         </ion-slide>
         </ion-slides>
 
