--- a/src/pages/modulo-viagens/abastecimento/abastecimento-bomba-1/abastecimento-bomba-1.html
+++ b/src/pages/modulo-viagens/abastecimento/abastecimento-bomba-1/abastecimento-bomba-1.html
@@ -5,9 +5,9 @@
 </ion-header>
 <ion-item>
     <ion-label floating>Litros</ion-label>
-    <ion-input type="number" [(ngModel)]="litros" (ngModelChange)="valida()"></ion-input>
+    <ion-input type="number" [(ngModel)]="firebaseProvider.litros1" (ngModelChange)="valida()"></ion-input>
 </ion-item>
 <ion-item>
     <ion-label floating>Preço/L</ion-label>
-    <ion-input type="number" min = "0"[(ngModel)]="preco" (ngModelChange)="valida()"></ion-input>
+    <ion-input type="number" min = "0"[(ngModel)]="firebaseProvider.preco1" (ngModelChange)="valida()"></ion-input>
 </ion-item>
