--- a/src/pages/modulo-viagens/despesas/despesas/despesas.html
+++ b/src/pages/modulo-viagens/despesas/despesas/despesas.html
@@ -33,4 +33,5 @@
       </ion-item> 
   </ion-list> 
   <button ion-button full (click)="adicionarDados();showAlert()" [disabled]="!valida()">Adicionar</button>
+  <button (click)="abreStorage()" ion-button block>Teste com Storage</button>
 </ion-content>
