--- a/src/pages/modulo-viagens/despesas/despesas/despesas.html
+++ b/src/pages/modulo-viagens/despesas/despesas/despesas.html
@@ -9,7 +9,7 @@
     
       <ion-item>
         <ion-label floating>Despesas</ion-label>
-        <ion-select [(ngModel)]="firebaseProvider.despesas" required #iptDespesa="ngModel">
+        <ion-select  [(ngModel)]="storage.despesa" required #iptDespesa="ngModel">
           <ion-option value="Lanche">Lanche</ion-option>
           <ion-option value="Almoço">Almoço</ion-option>
           <ion-option value="Jantar">Jantar</ion-option>
@@ -25,13 +25,13 @@
     
   <ion-item>
         <ion-label>Data</ion-label>
-        <ion-input type="date" [(ngModel)]="firebaseProvider.dataDespesas" required #iptData="ngModel"></ion-input>
+        <ion-input type="date" [(ngModel)]="storage.data" required #iptData="ngModel"></ion-input>
       </ion-item> 
       <ion-item>
         <ion-label floating>Valor</ion-label>
-        <ion-input type="float" type="number" [(ngModel)]="firebaseProvider.valorDespesas"></ion-input>
+        <ion-input type="float" type="number" [(ngModel)]="storage.valor" ></ion-input>
       </ion-item> 
   </ion-list> 
-  <button ion-button full (click)="adicionarDados();showAlert()" [disabled]="!valida()">Adicionar</button>
-  <button (click)="abreStorage()" ion-button block>Teste com Storage</button>
+  <button  *ngIf="!editando" ion-button full (click)="showAlert();adicionar()"  [disabled]="!valida()">Adicionar</button>
+
 </ion-content>
