--- a/src/pages/modulo-viagens/relatorios/relatorios.html
+++ b/src/pages/modulo-viagens/relatorios/relatorios.html
@@ -7,54 +7,21 @@
 </ion-header>
 <ion-content padding>
 
-
-  <ion-card *ngFor="let item of firebaseProvider.bancoDespesas$ | async">
-    <ion-card-header>
-      <span id="titulo">Despesas</span>
-    </ion-card-header>
-
-    <ion-card-content>
-      <span id="local">{{item.despesas}}</span>
-      <br>
-      <span id="valor"> Valor: {{item.valor}} </span>
-      <br>
-      <span id="horario">{{item.data}}</span>
-    </ion-card-content>
-  </ion-card>
-
-  <ion-list>
-
-    <ion-item>
-      <ion-input type="text" [(ngModel)]="storage.despesa" placeholder="Despesa"></ion-input>
-    </ion-item>
-
-    <ion-item>
-        <ion-input type="text" [(ngModel)]="storage.data" placeholder="Data"></ion-input>
-      </ion-item>
-
-    <ion-item>
-      <ion-input type="text" [(ngModel)]="storage.valor" placeholder="Valor"></ion-input>
-    </ion-item>
-
-  </ion-list>
-
-  <!-- Quando o editando for falso ele vai exibir esse botão -->
-  <button *ngIf="!editando" ion-button outline (click)="adicionar()">Adicionar</button>
-
   <!-- Quando for verdadeiro ele vai exibir os dois botões, e o adicionar vai sumir -->
-  <button *ngIf="editando"ion-button outline (click)="atualizar()">Atualizar</button>
-  <button *ngIf="editando" ion-button outline (click)="cancelarEditar()">Cancelar</button>  
+  <button *ngIf="editando" ion-button outline (click)="atualizar()">Atualizar</button>
+  <button *ngIf="editando" ion-button outline (click)="cancelarEditar()">Cancelar</button>
 
   <ion-card *ngFor="let storage of storages">
     <ion-card-header>
-      {{storage.despesa}}
+      <span id="titulo">Despesas</span>
     </ion-card-header>
     <ion-card-header>
-        {{storage.data}}
-      </ion-card-header>
-    <ion-card-content>
-      {{storage.valor}}
-    </ion-card-content>
+      <span>Despesas: {{storage.despesa}} </span>
+      <br>
+      <span>Data: {{storage.data}}</span>
+      <br>
+      <span>Valor: {{storage.valor}}</span>
+    </ion-card-header>
 
     <ion-row>
       <ion-col>
