--- a/src/pages/modulo-viagens/relatorios/relatorios.html
+++ b/src/pages/modulo-viagens/relatorios/relatorios.html
@@ -8,71 +8,17 @@
 <ion-content padding>
 
 
-  <ion-card *ngFor="let item of firebaseProvider.bancoDespesas$ | async">
+  <ion-card *ngFor="let storage of storages">
     <ion-card-header>
       <span id="titulo">Despesas</span>
     </ion-card-header>
 
     <ion-card-content>
-      <span id="local">{{item.despesas}}</span>
-      <br>
-      <span id="valor"> Valor: {{item.valor}} </span>
-      <br>
-      <span id="horario">{{item.data}}</span>
+      <span id="local">{{storage.despesas}}</span>
+      <span id="valor">{{storage.dataDespesas}} </span>
+      <span id="horario"> {{storage.valorDespesas}}</span>
+      <span id="horario"> {{storage.fornecedorOrigem}}</span>
     </ion-card-content>
   </ion-card>
-
-  <ion-list>
-
-    <ion-item>
-      <ion-input type="text" [(ngModel)]="storage.despesa" placeholder="Despesa"></ion-input>
-    </ion-item>
-
-    <ion-item>
-        <ion-input type="text" [(ngModel)]="storage.data" placeholder="Data"></ion-input>
-      </ion-item>
-
-    <ion-item>
-      <ion-input type="text" [(ngModel)]="storage.valor" placeholder="Valor"></ion-input>
-    </ion-item>
-
-  </ion-list>
-
-  <!-- Quando o editando for falso ele vai exibir esse botão -->
-  <button *ngIf="!editando" ion-button outline (click)="adicionar()">Adicionar</button>
-
-  <!-- Quando for verdadeiro ele vai exibir os dois botões, e o adicionar vai sumir -->
-  <button *ngIf="editando"ion-button outline (click)="atualizar()">Atualizar</button>
-  <button *ngIf="editando" ion-button outline (click)="cancelarEditar()">Cancelar</button>  
-
-  <ion-card *ngFor="let storage of storages">
-    <ion-card-header>
-      {{storage.despesa}}
-    </ion-card-header>
-    <ion-card-header>
-        {{storage.data}}
-      </ion-card-header>
-    <ion-card-content>
-      {{storage.valor}}
-    </ion-card-content>
-
-    <ion-row>
-      <ion-col>
-        <!-- Quando ele clicar no Editar ele vai saber qual Storage editar (storge)= ao objeto storage do *ngFor-->
-        <button ion-button icon-left clear small (click)="editar(storage)">
-          <ion-icon name="create"></ion-icon>
-          <div>Editar</div>
-        </button>
-      </ion-col>
-      <ion-col>
-        <button ion-button icon-left clear small (click)="deletar(storage)">
-          <ion-icon name="trash"></ion-icon>
-          <div>Deletar</div>
-        </button>
-      </ion-col>
-    </ion-row>
-
-  </ion-card>
-
 
 </ion-content>
