--- a/src/pages/modulo-viagens/arla-32/arla-pag/arla-pag.html
+++ b/src/pages/modulo-viagens/arla-32/arla-pag/arla-pag.html
@@ -8,12 +8,12 @@
 
   <ion-item>
     <ion-label floating>Litros</ion-label>
-    <ion-input type="number" min="0" [(ngModel)]="firebaseProvider.litrosArla" (ngModelChange)="valida()"></ion-input>
+    <ion-input type="number" min="0" [(ngModel)]="storageProvider.arla.litrosArla" (ngModelChange)="valida()"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label floating>Litro(R$)</ion-label>
-    <ion-input type="number" [(ngModel)]="firebaseProvider.litrosPrecoArla" (ngModelChange)="valida()"></ion-input>
+    <ion-input type="number" [(ngModel)]="storageProvider.arla.litrosPrecoArla" (ngModelChange)="valida()"></ion-input>
   </ion-item>
 
   <ion-item>
@@ -23,7 +23,7 @@
 
   <ion-item>
     <ion-label floating>Forma Pagamento</ion-label>
-    <ion-select [(ngModel)]="firebaseProvider.selectArla" (click)="valida()">
+    <ion-select [(ngModel)]="storageProvider.arla.selectArla" (click)="valida()">
       <ion-option value="ext">Boleto Bancário</ion-option>
       <ion-option value="cre">Cartão de Crédito</ion-option>
       <ion-option value="deb">Cartão de Débito</ion-option>
