--- a/src/pages/modulo-viagens/viagens/viagens.html
+++ b/src/pages/modulo-viagens/viagens/viagens.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="row">
-        <div class="column" (click)="linkArla32()">Arla 32
+        <div class="column" (click)="checkNetwork();">Arla 32
           <img class="imagem" src="assets/images/arla.svg" />
         </div>
 
@@ -35,7 +35,7 @@
 
 
       <div class="row">
-        <div class="column" (click)="linkReceitas()">Receitas
+        <div class="column" (click)="checkNetwork();linkReceitas()">Receitas
           <img class="imagem" src="assets/images/receitas.svg" />
         </div>
 
