--- a/src/pages/modulo-viagens/relatorios/despesas-relatorios/despesas-relatorios.html
+++ b/src/pages/modulo-viagens/relatorios/despesas-relatorios/despesas-relatorios.html
@@ -1,7 +1,8 @@
 <ion-content padding>
 
+  <span *ngIf= "tamanho < 1" class="vazio"> Nenhum dado encontrado</span>
+  
     <ion-card *ngFor="let storage of storages">
-        <span *ngIf="storage.id == 1">
         <ion-card-header>
           <span id="titulo">Despesas</span>
           <br>
@@ -17,7 +18,6 @@
           <br>
          
         </ion-card-content>
-        </span>
     </ion-card>
   
   </ion-content>
