--- a/src/pages/inicio/inicio.html
+++ b/src/pages/inicio/inicio.html
@@ -1,4 +1,4 @@
 <ion-content padding>
-  <page-login *ngIf="storages.isLoggedIn"></page-login>
-  <page-principal *ngIf="storages.isLoggedIn"></page-principal>
+  <page-login></page-login>
+  <!-- <page-principal></page-principal> -->
 </ion-content>
