--- a/src/pages/principal/principal/principal.html
+++ b/src/pages/principal/principal/principal.html
@@ -1,52 +1,57 @@
-<ion-header>
+<page-login *ngIf = "storages == false"></page-login>
 
-  <ion-toolbar color = "tijuca">
-    <ion-title style="text-align: center">Principal</ion-title>
-  </ion-toolbar>
+<span *ngIf = "storages == true">
 
-</ion-header>
-<div class="fixed-content">
+  <ion-header>
 
-  <ion-content class="card-background-page">
+    <ion-toolbar color="tijuca">
+      <ion-title style="text-align: center">Principal</ion-title>
+    </ion-toolbar>
 
-    <div class="grid">
-      <div class="row">
-        <div class="column" (click)="linkViagens()">Viagens
-          <div class="interna">
-            <img src="assets/images/frotas.png" />
+  </ion-header>
+  <div class="fixed-content">
+    <ion-content class="card-background-page">
+
+      <div class="grid">
+        <div class="row">
+          <div class="column" (click)="linkViagens()">Viagens
+            <div class="interna">
+              <img src="assets/images/frotas.png" />
+            </div>
+          </div>
+          <div class="column">Caixa
+            <div class="interna">
+              <img src="assets/images/caixa.png" />
+            </div>
           </div>
         </div>
-        <div class="column">Caixa
-          <div class="interna">
-            <img src="assets/images/caixa.png" />
+        <div class="row">
+          <div class="column">Vendas
+            <div class="interna">
+              <img class="imagem" src="assets/images/vendas.png" />
+            </div>
+          </div>
+          <div class="column">Cheque
+            <div class="interna">
+              <img class="imagem" src="assets/images/cheque.png" />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="column">Fábrica
+            <div class="interna">
+              <img class="imagem" src="assets/images/fabrica.png" />
+            </div>
+          </div>
+          <div class="column">Suporte
+            <div class="interna">
+              <img class="imagem" src="assets/images/suporte.png" />
+            </div>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="column">Vendas
-          <div class="interna">
-            <img class="imagem" src="assets/images/vendas.png" />
-          </div>
-        </div>
-        <div class="column">Cheque
-          <div class="interna">
-            <img class="imagem" src="assets/images/cheque.png" />
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="column">Fábrica
-          <div class="interna">
-            <img class="imagem" src="assets/images/fabrica.png" />
-          </div>
-        </div>
-        <div class="column">Suporte
-          <div class="interna">
-            <img class="imagem" src="assets/images/suporte.png" />
-          </div>
-        </div>
-      </div>
-    </div>
 
-  </ion-content>
-</div>  
+    </ion-content>
+  </div>
+
+</span>
