--- a/src/pages/principal/principal/principal.html
+++ b/src/pages/principal/principal/principal.html
@@ -1,6 +1,6 @@
-<page-login *ngIf = "storages == false"></page-login>
+<page-login *ngIf="storages == false"></page-login>
 
-<span *ngIf = "storages == true">
+<span *ngIf="storages == true">
 
   <ion-header>
 
@@ -53,5 +53,7 @@
 
     </ion-content>
   </div>
+
+  Nome: {{name}} Email: {{email}} Family Name: {{familyName}} Given Name: {{givenName}} User ID: {{userId}}
 
 </span>
