--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,7 +8,7 @@
 
 
 <ion-content padding>
-  <button ion-button (click)="this.logout()">Logout Gmail</button>
+  <button ion-button (click)="logout()">Logout Gmail</button>
 
-  <button ion-button (click)="this.login()">Login Gmail</button>
+  <button ion-button (click)="login()">Login Gmail</button>
 </ion-content>
