--- a/src/pages/principal/principal/principal.html
+++ b/src/pages/principal/principal/principal.html
@@ -1,6 +1,6 @@
-<page-login *ngIf="storages == false"></page-login>
+<!-- <page-login></page-login> -->
 
-<span *ngIf="storages == true">
+<span>
 
   <ion-header>
 
