--- a/src/pages/modulo-viagens/arla-32/arla-pag/arla-pag.html
+++ b/src/pages/modulo-viagens/arla-32/arla-pag/arla-pag.html
@@ -24,16 +24,16 @@
   <ion-item>
     <ion-label floating>Forma Pagamento</ion-label>
     <ion-select [(ngModel)]="storageProvider.arla.selectArla" (click)="valida()">
-      <ion-option value="ext">Boleto Bancário</ion-option>
-      <ion-option value="cre">Cartão de Crédito</ion-option>
-      <ion-option value="deb">Cartão de Débito</ion-option>
-      <ion-option value="che">Cheque</ion-option>
+      <ion-option value="Boleto Bancário">Boleto Bancário</ion-option>
+      <ion-option value="Cartão de Crédito">Cartão de Crédito</ion-option>
+      <ion-option value="Cartão de Débito">Cartão de Débito</ion-option>
+      <ion-option value="Cheque">Cheque</ion-option>
 <!--  <ion-option value="ter">Cheque Terceiro</ion-option> -->
 <!--  <ion-option value="cob">Cobrança em Carteira</ion-option> 
       <ion-option value="dep">Depósito Bancário</ion-option>
       <ion-option value="des">Despesa</ion-option>
       <ion-option value="desv">Despesav</ion-option>-->
-      <ion-option value="din">Dinheiro</ion-option>
+      <ion-option value="Dinheiro">Dinheiro</ion-option>
 <!--  <ion-option value="moe">Moedas</ion-option> -->
     </ion-select>
   </ion-item>
