--- a/src/pages/modulo-viagens/arla-32/arla-posto/arla-posto.html
+++ b/src/pages/modulo-viagens/arla-32/arla-posto/arla-posto.html
@@ -8,8 +8,8 @@
   <ion-item>
     <ion-label floating>Tipo Abastecimento</ion-label>
     <ion-select [(ngModel)]="storageProvider.arla.tipoArla" (ngModelChange)="valida()">
-      <ion-option value="ext">Externo</ion-option>
-      <ion-option value="int">Interno</ion-option>
+      <ion-option value="Externo">Externo</ion-option>
+      <ion-option value="Interno">Interno</ion-option>
     </ion-select>
   </ion-item>
 
