--- a/src/pages/modulo-viagens/receitas/receita-fornecedor/receita-fornecedor.html
+++ b/src/pages/modulo-viagens/receitas/receita-fornecedor/receita-fornecedor.html
@@ -26,9 +26,9 @@
     <ion-item>
       <ion-label floating>Tipo de Pagamento</ion-label>
       <ion-select [(ngModel)]="storageProvider.receitas.tipoPagmt" (click)="valida()">
-        <ion-option value="proprio">Próprio</ion-option>
-        <ion-option value="tercerizado">Tercerizado</ion-option>
-        <ion-option value="quarterizado">Quarterizado</ion-option>
+        <ion-option value="Próprio">Próprio</ion-option>
+        <ion-option value="Tercerizado">Tercerizado</ion-option>
+        <ion-option value="Quarterizado">Quarterizado</ion-option>
       </ion-select>
     </ion-item>
   </ion-list>
