--- a/src/pages/principal/principal/principal.html
+++ b/src/pages/principal/principal/principal.html
@@ -51,6 +51,7 @@
         </div>
       </div>
 
+      <button ion-button color="tijuca" full (click)="logout()">Logout</button>
     </ion-content>
   </div>
 
